07/23 CLI Command Util 추가 및 UI 수정(구조화 작업은 일단 보류)
