# src/main/java/com/skcc/apitest/controller/MainController.java
@@ -1,5 +1,10 @@
 package com.skcc.apitest.controller;
 
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.util.ArrayList;
 import java.util.Map;
 
 import org.springframework.web.bind.annotation.GetMapping;
@@ -10,6 +15,8 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.ModelAndView;
 import org.yaml.snakeyaml.Yaml;
+
+import com.skcc.apitest.util.CLIExecutor;
 
 @RestController
 public class MainController {
@@ -28,14 +35,24 @@ public class MainController {
 	@PostMapping("/")
 	public ModelAndView createYaml(@RequestParam("rowtext") String doc) {
 		Yaml yaml = new Yaml();
-		Map map = (Map)yaml.load(doc);
-		Map paths = (Map) map.get("paths");
-		System.out.println(map.get("openapi"));
-		System.out.println(map.get("info"));
-		System.out.println(map.get("servers"));
-		System.out.println(map.get("paths"));
-		System.out.println(paths.get("/board"));
-		System.out.println(paths.get("/board/{id}"));
+		File file = new File("src/main/resources/yaml/openapi.yaml");
+		try {
+			FileOutputStream fos = new FileOutputStream(file);
+			byte[] content = doc.getBytes();
+			fos.write(content);
+			fos.flush();
+			fos.close();
+			String dir = System.getProperty("user.dir")+"\\src\\main\\resources";
+			String cmd = "openapi2postmanv2 -s "+dir+"\\yaml\\openapi.yaml -o "+dir+"\\collection\\collection.json";
+			System.out.println(cmd);
+			CLIExecutor.execute(cmd);
+			
+			cmd = "newman run "+dir+"\\\\collection\\\\collection.json";
+			CLIExecutor.execute(cmd);
+			System.out.println("finish");
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
 		return new ModelAndView("index");
 	}
 }
