# target/classes/yaml/openapi.yaml
@@ -1,114 +1,109 @@
-openapi: 3.0.3
+openapi: "3.0.0"
 info:
-  title: demo API
-  description: demom API
-  version: 0.0.1
+  version: 1.0.0
+  title: Swagger Petstore
+  license:
+    name: MIT
 servers:
-  - url: http://127.0.0.1:8080/demo
-    description: host url
+  - url: http://petstore.swagger.io/v1
 paths:
-  /board:
+  /pets:
     get:
-      summary: 모든 게시물을 가져옴
-      description: 모든 게시물을 가져옴
+      summary: List all pets
+      operationId: listPets
+      tags:
+        - pets
+      parameters:
+        - name: limit
+          in: query
+          description: How many items to return at one time (max 100)
+          required: false
+          schema:
+            type: integer
+            format: int32
       responses:
-        '200':    # status code
-          description: 모든 게시물의 리스트
+        '200':
+          description: An paged array of pets
+          headers:
+            x-next:
+              description: A link to the next page of responses
+              schema:
+                type: string
+          content:
+            application/json:    
+              schema:
+                $ref: "#/components/schemas/Pets"
+        default:
+          description: unexpected error
           content:
             application/json:
-              schema: 
-                type: array
-                items: 
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    title:
-                      type: string
-                    content:
-                      type: string
-                    name:
-                      type: string
+              schema:
+                $ref: "#/components/schemas/Error"
     post:
-      summary: 게시물등록
-      description: 게시물등록
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                title:
-                  type: string
-                content:
-                  type: string
-                name:
-                  type: string
+      summary: Create a pet
+      operationId: createPets
+      tags:
+        - pets
       responses:
-        '200':    # status code
-          description: 모든 게시물의 리스트
+        '201':
+          description: Null response
+        default:
+          description: unexpected error
           content:
             application/json:
-              schema: 
-                type: array
-                items: 
-                  type: object
-                  properties:
-                    id:
-                      type: integer
-                    title:
-                      type: string
-                    content:
-                      type: string
-                    name:
-                      type: string
-  /board/{id}: 
-    parameters: 
-      - name: id
-        in: path
-        required: true
-        description: 수정할 게시물의 id
-        schema:
+              schema:
+                $ref: "#/components/schemas/Error"
+  /pets/{petId}:
+    get:
+      summary: Info for a specific pet
+      operationId: showPetById
+      tags:
+        - pets
+      parameters:
+        - name: petId
+          in: path
+          required: true
+          description: The id of the pet to retrieve
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Expected response to a valid request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Pets"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+components:
+  schemas:
+    Pet:
+      required:
+        - id
+        - name
+      properties:
+        id:
           type: integer
           format: int64
-          minimum: 1
-          default: 1
-    put:
-      summary: 게시물 수정
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                title:
-                  type: string
-                content:
-                  type: string
-                name:
-                  type: string
-      responses:
-        '200':
-          description: created
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  title:
-                    type: string
-                  content:
-                    type: string
-                  name:
-                    type: string
-    delete:
-      summary: 게시물 삭제
-      responses:
-        '200':
-          description: created
-          content:
-            application/json:
-              schema:
-                type: boolean
+        name:
+          type: string
+        tag:
+          type: string
+    Pets:
+      type: array
+      items:
+        $ref: "#/components/schemas/Pet"
+    Error:
+      required:
+        - code
+        - message
+      properties:
+        code:
+          type: integer
+          format: int32
+        message:
+          type: string
